[metadata]
name = gnpy
description_file = README.md
description_content_type = text/markdown; variant=GFM
author = Telecom Infra Project
author_email = esther.lerouzic@orange.com
license = BSD-3-Clause
home_page = https://github.com/Telecominfraproject/oopt-gnpy
project_urls =
    Bug Tracker = https://github.com/Telecominfraproject/oopt-gnpy/issues
    Documentation = https://gnpy.readthedocs.io/
python_requires = >=3.11,<3.13
classifier =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Intended Audience :: Telecommunications Industry
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Physics
    Topic :: System :: Networking
keywords =
    optics
    network
    fiber
    communication
    route
    planning
    optimization

[pbr]
warnerrors = True

[files]
packages = gnpy

[options.entry_points]
console_scripts =
    gnpy-example-data = gnpy.tools.cli_examples:show_example_data_dir
    gnpy-transmission-example = gnpy.tools.cli_examples:transmission_main_example
    gnpy-path-request = gnpy.tools.cli_examples:path_requests_run
    gnpy-convert-xls = gnpy.tools.convert:_do_convert
    gnpy-convert-yang = gnpy.tools.convert_legacy_yang:main

[options]
install_requires =
    # matplotlib 3.8 removed support for Python 3.8
    matplotlib>=3.10.8,<4
    # networkx 3.2 removed support for Python 3.8
    networkx>=3.6.1,<4
    # numpy 1.25 removed support for Python 3.8
    numpy>=2.4.1,<3
    oopt_gnpy_libyang>=0.0.14
    openpyxl>=3.1.5,<4
    # pandas 2.1 removed support for Python 3.8
    pandas>=2.3.3,<3
    pbr>=7.0.3,<8
    # scipy 1.11 removed support for Python 3.8
    scipy>=1.16.3,<2
    tabulate>=0.9.0,<1
    # xlrd 2.x removed support for .xlsx, it's only .xls now
    xlrd>=2.0.2,<3

[options.extras_require]
tests =
    build>=1.0.3,<2
    pytest>=8,<9
    # flake v6 killed the --diff option
    flake8>=5.0.4,<6

docs =
    alabaster>=1.0.0,<2
    docutils>=0.21.2,<1
    myst-parser>=4.0.1,<5
    Pygments>=2.19.2,<3
    rstcheck
    Sphinx>=8.2.3,<9
    sphinxcontrib-bibtex>=2.6.5,<3
    sphinx_rtd_theme>=3.0.2,<4
